--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,15 +1,7 @@
 # Associations
 # comment out the urls if you do not wish to display them
-
-- organization: PETA
-  role: Volunteer
-  year: 2001 &mdash; 2010
-  url: https://www.peta.org/
-  summary: Organized fund drives and participated in fundraising events for the benefit of PETA's local Springfield operations.
-
-
-- organization: Yale Amnesty International
-  role: Communications coordinator
-  year: 2002 &mdash; 2004
-  url: http://campuspress.yale.edu/amnesty/
-  summary: During my junion and senior years at Yale, I was actively involved in Yale Amnesty International where I helped facilitate our student organization communications through website maintenance, writing for our campus publication, and graphic design of related materials.
+- organization: Athletik Club Weinheim
+  role: Stellvertretender Abteilungsleiter
+  year: 2023 &mdash; heute
+  url: https://www.ac-weinheim.de/
+  summary: Stellvertretender Abteilungsleiter der Radsport Abteilung des AC Weinheim. Verantwortlich für die Organisation und Durchführung von Trainingsfahrten und Veranstaltungen.
