--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: Diplom Informatiker (FH)
+  uni: Fachhoschule Coburg
+  year: 2002 &mdash; 2007
+#  awards:
+#    - award: Summa Cumme Laude graduate
+#  summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: Fachgebundene Hochschulreife
+  uni: Fachoberschule Coburg
+  year: 2000 &mdash; 2002
+#  award: Most likely to succeed
+#  summary: You can choose to have either a single or multiple awards
