Create the initial version of my resume.

--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -18,4 +18,4 @@
 - award: SAP PI Certified Consultant
   organization: SAP
   year: 2009
-  summary: Certified Consultant in SAP Process Integration, eine Middleware-Lösung die die Integration von unterschiedlichen Anwendungen und Sysemen ermöglicht.
+  summary: Certified Consultant in SAP Process Integration, eine Middleware-Lösung die die Integration von unterschiedlichen Anwendungen und Systemen ermöglicht.
