--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Diplom Informatiker (FH)
-  uni: Fachhoschule Coburg
+  uni: Fachhochschule Coburg
   year: 2002 &mdash; 2007
 #  awards:
 #    - award: Summa Cumme Laude graduate
